# docs-test

./: .buildinfo  .gitignore  Dockerfile  README.md  docker-compose.yml  genindex.html  index.html  lint.sh  modules.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.sh  versions.json  zeus.api.html  zeus.api.v1.html  zeus.html
.devcontainer/: devcontainer.json  docker-compose.yml  post-install.sh
.github/workflows/: docs.yml  test.yml
1.0.0/: index.html  modules.html  py-modindex.html  searchindex.js  zeus.api.html  zeus.api.v1.html
1.0.0/_modules/zeus/api/v1/: routes.html
_modules/: index.html
_modules/zeus/api/v1/: routes.html
docs/source/: conf.py  index.rst  zeus.api.rst  zeus.rst
latest/: .buildinfo  genindex.html  objects.inv  zeus.html
latest/_modules/: index.html
latest/_sources/: zeus.api.v1.rst.txt
src/zeus/: app.py
src/zeus/api/v1/: routes.py
tests/unit/: test_zeus.py
