[tool.poetry]
name = "zeus"
version = "0.0.0"
description = "Project to test generation of static versioned Sphinx documentation for a REST API."
authors = ["Hogarth Worldwide"]
readme = "README.md"
packages = [
    { include = "zeus", from = "src" }
]
include = [
    
]

[tool.poetry.dependencies]
python = "~3.11.10"
pydantic = "^2.9.2"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sphinx = "^8.1.3"
sphinxcontrib-redoc = "^1.6.0"
sphinx-immaterial = "^0.12.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
ruff = "^0.6.8"
black = "^24.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle checks.
    "E4", "E7", "E9",
    # Pyflakes checks.
    "F"
]
ignore = []

# Rules to allow auto-fix for with `--fix`.
fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = "tests"

[tool.mypy]
files = "src"
mypy_path = "src"
exclude = [
    ".venv"
]

namespace_packages = true
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
